--- a/History.txt
+++ b/History.txt
@@ -5,6 +5,6 @@
 
 === 1.10.1 2013-12-16
 
-* 
-  * Initial release
+=== 1.10.3 2013-05-09
 
+* Fixed so that a file will not be searched multiple times.
